--- a/ptc_web/src/App.css
+++ b/ptc_web/src/App.css
@@ -41,12 +41,20 @@
 .Titulologingmail {
   width: 95%;
   text-align: center;
+  color: white;
+  font-size:larger;
 
 }
 
 .Titulologinpas {
   width: 95%;
   text-align: center;
+  color: white;
+  font-size:larger;
+}
+
+.colores{
+  color: red;
 }
 
 .BotonLogin {
@@ -93,10 +101,10 @@
   margin: 0 auto;
   border-radius: 10px;
   padding: 20px;
-  background: rgba( 155, 155, 155, 0.3 );
+  background: rgba( 0, 0, 0, 0.8 );
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 16.5px );
-  -webkit-backdrop-filter: blur( 16.5px );
+  backdrop-filter: blur( 7.5px );
+  -webkit-backdrop-filter: blur( 7.5px );
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
 
