--- a/ptc_web/src/App.css
+++ b/ptc_web/src/App.css
@@ -287,10 +287,28 @@ margin: 10px;
     transform: rotate(360deg);
   }
 }
+.nuevafilaButton{
+  margin: 0 auto;
+  border: none;
+  padding:10px;
+  border-radius: 4px;
+  font-size: 19px;
+  background-color: #2980B9;
+  color: white;
+  transition: all .5s;
+  margin-bottom: 15px;
+}
+.nuevafilaButton:hover{
+  opacity: .9;
+  background-color:#196192;
+
+  transition: all .5s;
+}
 
 .accionAtomar {
   display: flex;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   text-align: center;
   background-color: #000000;
@@ -323,6 +341,59 @@ margin: 10px;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+.ingresanuevosprod{
+  font-size: 21px;
+  padding: 5px;
+}
+.bodymodla{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 20px;
+}
+
+.TituloEliminar{
+  background-color: #EC7063;
+  text-align: center;
+  color: white;
+  font-weight: bolder;
+}
+.tablaAgregarProductos{
+  width: 100%;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  align-items:flex-end;
+}
+#TBALADIRECTA{
+  width: 80%;
+  max-height: 350px;
+  overflow: scroll;
+}
+.TituloProductosNuevos{
+  background-color: #2980B9;
+  text-align: center;
+  color: white;
+  font-weight: bolder;
+}
+.inputEditar{
+  width: 100%;
+  word-wrap: break-word;
+  height: 50px;
+  text-align: center;
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 4px;
+
+
+}
+.TituloEditar{
+  background-color: #7DCEA0;
+  text-align: center;
+  color: white;
+  font-weight: bolder;
 }
 
 .ButtonesAgregarProducto {
@@ -393,7 +464,7 @@ margin: 10px;
   padding: 0 1rem;
   padding-left: 2.5rem;
   border: 2px solid transparent;
-  border-bottom: 2px solid rgba(201, 29, 29, 0.4);
+  border-bottom: 2px solid rgba(76, 73, 73, 0.4);
   ;
   border-radius: 8px;
   outline: none;
@@ -410,7 +481,6 @@ margin: 10px;
 .input:focus,
 input:hover {
   outline: none;
-  border-color: rgba(201, 29, 29, 0.4);
   background-color: #fff;
 }
 
