--- a/ptc_web/src/App.css
+++ b/ptc_web/src/App.css
@@ -636,3 +636,39 @@ input:hover {
   padding-top: 5px;
   width: 30%;
 }
+
+.panel-sm{
+  background-color: darkslateblue;
+  color: salmon;
+  border-color: #61dafb;
+  border-width: 50px;
+  height: 30vh;
+  border-top: 2px solid withe;
+  border-bottom: 2px solid withe;
+}
+.panel{
+  background-color: darkslateblue;
+  color: salmon;
+  border: #000000;
+  height: 30vh;
+}
+
+.panel-lg{
+  background-color: darkslateblue;
+  color: whitesmoke;
+  border: #000000;
+  height: 70vh;
+}
+
+
+#mi-col {
+  display: flex;
+  flex-direction:column-reverse;
+  justify-content: space-between;
+  height: auto; /* altura de la columna */
+}
+
+#mi-col .child {
+  height: 32%; /* altura de cada elemento hijo */
+  color: salmon;
+}
