--- a/ptc_web/src/App.css
+++ b/ptc_web/src/App.css
@@ -1,11 +1,86 @@
 .App {
   text-align: center;
+  margin-top: 10%;
+  margin-bottom: 15%;
 }
+.Loader{
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0 auto;
+  width: 99.99%;
+  overflow: hidden;
+  height: 99vh;
+  background-color: #000000;
+  z-index: 10;
+  opacity: .9;
+}
+.spinner {
+  width: 44px;
+  height: 44px;
+  animation: spinner-y0fdc1 2s infinite ease;
+  transform-style: preserve-3d;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+ }
+ 
+ .spinner > div {
+  background-color: rgba(0,77,255,0.2);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  border: 2px solid #004dff;
+ }
+ 
+ .spinner div:nth-of-type(1) {
+  transform: translateZ(-22px) rotateY(180deg);
+ }
+ 
+ .spinner div:nth-of-type(2) {
+  transform: rotateY(-270deg) translateX(50%);
+  transform-origin: top right;
+ }
+ 
+ .spinner div:nth-of-type(3) {
+  transform: rotateY(270deg) translateX(-50%);
+  transform-origin: center left;
+ }
+ 
+ .spinner div:nth-of-type(4) {
+  transform: rotateX(90deg) translateY(-50%);
+  transform-origin: top center;
+ }
+ 
+ .spinner div:nth-of-type(5) {
+  transform: rotateX(-90deg) translateY(50%);
+  transform-origin: bottom center;
+ }
+ 
+ .spinner div:nth-of-type(6) {
+  transform: translateZ(22px);
+ }
+ 
+ @keyframes spinner-y0fdc1 {
+  0% {
+   transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);
+  }
+ 
+  50% {
+   transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);
+  }
+ 
+  100% {
+   transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
+  }
+ }
 
 .App-logo {
   margin: 0 auto;
   height: 150px;
   display: block;
+
 }
 
 .tituloProdi {
@@ -135,6 +210,7 @@
   color: black;
   font-size: 1.2cm;
   font-family: 'Alata', sans-serif;
+  font-weight:400;
 }
 
 .SubTitulos {
@@ -323,6 +399,25 @@
   height: 100%;
   margin: 0 auto;
   text-align: center;
+}
+.calis{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+.calis p{
+  align-items: center;
+
+}
+.calis button{
+  margin: 0 auto;
+  border: none;
+  background-color: none;
+  border-radius: 4px;
+  width: 35px;
+  height: 35px;
 }
 
 .accionAtomar p {
@@ -767,4 +862,27 @@ input:hover {
   background-color: #808B96;
   color: white;
 }
-
+#modal{
+  width: 95%;
+}
+#main-modal {
+  min-width: 95%;
+}
+#select2{
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  border: 1px solid black;
+  padding: 5px;
+}
+#generarBotton{
+  border: none;
+  border-radius: 4px;
+  background-color: #2980B9;
+  color: white;
+  width: 95%;
+  padding: 10px;
+  height: 100%;
+  text-align: center;
+  align-items: center;
+}
